[update] Adding min meters to deliveryman with cycle and other. Solving trouble in Float to String. And verify country available before to make an order