@@ -15,7 +15,11 @@ import com.google.android.gms.location.places.ui.PlacePicker;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.math.RoundingMode;
+import java.text.NumberFormat;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Timer;
 import java.util.TimerTask;
 
@@ -36,10 +40,13 @@ public class UserInteractorImpl implements UserInteractor, DirectionFinderListen
 
     private LocationManager locationManager;
     private DomixApplication app;
+    private boolean countryAvailable = false;
     private int minFare, priceInCash, myCredit, routeInt;
-    private double fareToApply, routeDouble;
-    private String coordsFromPrice, coordsToPrice, cityOrigen, countryOrigen, currencyCode, userID;
+    private float fareToApply, routeDouble;
+    private String coordsFromPrice, coordsToPrice, cityOrigen, countryOrigen, currencyCode, userID,
+                   countryFrom, countryTo;
     private List<Address> geocodeMatches = null;
+    private List<String> countriesOk;
     private UserPresenter presenter;
     private UserRepository repository;
 
@@ -95,33 +102,52 @@ public class UserInteractorImpl implements UserInteractor, DirectionFinderListen
             if (!latFrom.equals("") || !lonFrom.equals("")){
                 String arr [] = getGeolocation(latFrom, lonFrom, activity);
                 coordsFromPrice = arr[3];
+                countryFrom = arr[0];
                 presenter.responseFromName(arr[2]);
             }
         } else if (whatAddress == 1){
             if (!latTo.equals("") || !lonTo.equals("")){
                 String arr [] = getGeolocation(latTo, lonTo, activity);
                 coordsToPrice = arr[3];
+                countryTo = arr[0];
                 countryOrigen = arr[0];
                 cityOrigen = arr[1];
-//                repository.requestFareAndMyCredit(arr[0], uid);
                 presenter.responseToName(arr[2]);
             }
         }
 
         if (coordsFromPrice != null && coordsToPrice != null) {
-            try {
-                new DirectionFinder(this, coordsFromPrice, coordsToPrice).execute();
-            } catch (UnsupportedEncodingException e) {
-                e.printStackTrace();
+            for (int i = 0; i < countriesOk.size(); i++ ){
+                if (countryFrom.equals(countriesOk.get(i)) && countryTo.equals(countriesOk.get(i))){
+                    countryAvailable = true;
+                    try {
+                        new DirectionFinder(this, coordsFromPrice, coordsToPrice).execute();
+                    } catch (UnsupportedEncodingException e) {
+                        e.printStackTrace();
+                    }
+                    break;
+                }
+            }
+
+            if (!countryAvailable){
+                presenter.countryNotAvailable();
             }
         }
     }
 
+    @Override
+    public void responseForCountriesAvailable(List<String> countries) {
+        countriesOk = new ArrayList<String>();
+        countriesOk = countries;
+    }
+
+    @Override
+    public void countriesAvailable() {
+        repository.countriesAvailable();
+    }
+
     public String [] getGeolocation(String latFrom, String lonFrom, Activity activity){
         String arr [] = new String[4];
-//        if (!latFrom.equals("") || !lonFrom.equals("")){
-//
-//        }
         double latitFrom = Double.valueOf(latFrom);
         double longiFrom = Double.valueOf(lonFrom);
         try {
@@ -156,8 +182,8 @@ public class UserInteractorImpl implements UserInteractor, DirectionFinderListen
             presenter.responseEmptyFields(activity.getString(R.string.toast_enter_description1));
         } else if (description2.equals("")) {
             presenter.responseEmptyFields(activity.getString(R.string.toast_enter_description2));
-        } else if (String.valueOf(paymentCash).equals("")) {
-            presenter.responseEmptyFields(activity.getString(R.string.toast_enter_payment_amount));
+        } else if (paymentCash == 0 && creditUsed == 0) {
+            presenter.responseEmptyFields(activity.getString(R.string.toast_country_not_available));
         } else {
             if (fieldsWasFill) {
                 repository.request(uid, email, country, city, from, to, disBetweenPoints, description1, description2,
@@ -169,19 +195,24 @@ public class UserInteractorImpl implements UserInteractor, DirectionFinderListen
     }
 
     @Override
-    public void responseFareAndMyCredit(String currency, double fare, int minFareCost, int credit) {
+    public void responseFareAndMyCredit(String currency, float fare, int minFareCost, int credit) {
+        NumberFormat formatter = NumberFormat.getInstance(Locale.US);
+        formatter.setMaximumFractionDigits(1);
+        formatter.setMinimumFractionDigits(1);
+        formatter.setRoundingMode(RoundingMode.HALF_UP);
+
         currencyCode = currency;
         fareToApply = fare;
         minFare = minFareCost;
         myCredit = credit;
         routeDouble = routeInt * fareToApply;
-        String dos = String.format("%.1f", routeDouble / 1000);
-        double tres = Double.valueOf(dos);
-        priceInCash = (int) (tres * 1000);
+        Float dos = new Float(formatter.format(routeDouble / 1000));
+        priceInCash = (int) (dos * 1000);
         if (priceInCash < minFare) {
             priceInCash = minFare;
         }
         presenter.responseCash(priceInCash, currencyCode, countryOrigen, cityOrigen, routeInt, myCredit);
+
     }
 
     @Override
